src/gen/ANTLR/PythonParser.java
// Generated from /home/ali/IdeaProjects/Flask_Compiler/src/ANTLR/PythonParser.g4 by ANTLR 4.13.2
package gen.ANTLR;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TAB_IN=1, TAB_OUT=2, EXPR_START=3, STMT_START=4, COMMENT_START=5, IMPORT=6, 
		FROM=7, TRUE=8, FALSE=9, NONE=10, IF=11, ELIF=12, ELSE=13, FOR=14, WHILE=15, 
		DEF=16, RETURN=17, PRINT=18, CLASS=19, SELF=20, BREAK=21, CONTINUE=22, 
		PASS=23, TRY=24, EXCEPT=25, FINALLY=26, S_AND=27, S_OR=28, NOT=29, IN=30, 
		IS=31, AS=32, SET=33, PIPE=34, GLOBAL=35, LAMBDA=36, PLUS=37, MINUS=38, 
		MULTIPLY=39, SLASH=40, MOD=41, LT=42, GT=43, LTE=44, GTE=45, EQUAL=46, 
		NEQ=47, STRICT_EQ=48, STRICT_NEQ=49, ASSIGN=50, AND=51, OR=52, LPAREN=53, 
		RPAREN=54, LBRACK=55, RBRACK=56, LCBRACK=57, RCBRACK=58, COLON=59, SEMI=60, 
		COMMA=61, DOT=62, HASHTAG=63, AT=64, TAG_OPEN=65, TRIPLE_STRING=66, NUMBER=67, 
		STRING=68, IDENTIFIER=69, COMMENT=70, WS=71, EXPR_END=72, STMT_END=73, 
		COMMENT_END=74, JINJA_LPAREN=75, JINJA_RPAREN=76, JINJA_COMMA=77, JINJA_IF=78, 
		JINJA_ELIF=79, JINJA_ELSE=80, JINJA_ENDIF=81, JINJA_FOR=82, JINJA_ENDFOR=83, 
		JINJA_SET=84, JINJA_BLOCK=85, JINJA_ENDBLOCK=86, JINJA_EXTENDS=87, JINJA_INCLUDE=88, 
		JINJA_IGNORE=89, JINJA_MISSING=90, JINJA_WITH=91, JINJA_ENDWITH=92, JINJA_WITHOUT=93, 
		JINJA_CONTEXT=94, JINJA_WS=95, CSS_WS=96, CSS_PROPERTY_START=97, CSS_PROPERTY_END=98, 
		CSS_SEMI=99, CSS_TYPE=100, CSS_COM_S=101, CSS_COM_E=102, STYLE_END=103, 
		CSS_ID=104, CSS_COMMENT=105, CSS_HEX=106, TAG_SLASH=107, TAG_CLOSE=108, 
		HTML_ASSIGN=109, REQUIRED=110, HTML_ATTR_NAME=111, HTML_COMMENT=112, HTML_WS=113, 
		HTML_TEXT=114, HTML_STYLE_START=115, NESTED_TAG_OPEN=116, CONTENT_END_TAG=117, 
		CONTENT_WS=118;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simpleStatement = 2, RULE_compoundStatement = 3, 
		RULE_assignment = 4, RULE_value = 5, RULE_list = 6, RULE_listComprehension = 7, 
		RULE_tuple = 8, RULE_elements = 9, RULE_json = 10, RULE_jsonData = 11, 
		RULE_expressions = 12, RULE_comparisonExpressions = 13, RULE_mathematicalExpressions = 14, 
		RULE_logicalExpressions = 15, RULE_valuesExp = 16, RULE_lambda = 17, RULE_atom = 18, 
		RULE_primaryAtom = 19, RULE_postfix = 20, RULE_globalStatement = 21, RULE_pythonImport = 22, 
		RULE_importSyntax = 23, RULE_fromImport = 24, RULE_importSource = 25, 
		RULE_importList = 26, RULE_importName = 27, RULE_aliasName = 28, RULE_printStatement = 29, 
		RULE_printArgs = 30, RULE_block = 31, RULE_ifStatement = 32, RULE_ifBlock = 33, 
		RULE_elifBlock = 34, RULE_elseBlock = 35, RULE_forLoop = 36, RULE_forExpression = 37, 
		RULE_whileLoop = 38, RULE_function = 39, RULE_parameters = 40, RULE_mandatoryParams = 41, 
		RULE_defaultParams = 42, RULE_parameterWithValue = 43, RULE_returnStatement = 44, 
		RULE_tripleString = 45, RULE_anyId = 46, RULE_functionCall = 47, RULE_argument = 48, 
		RULE_decorator_rule = 49, RULE_classDef = 50, RULE_baseClass = 51, RULE_jinjaBody = 52, 
		RULE_jinjaExpression = 53, RULE_jinjaFilter = 54, RULE_jinjaComment = 55, 
		RULE_jinjaStatement = 56, RULE_jinjaStatementContent = 57, RULE_jinjaIfStatements = 58, 
		RULE_jinjaIf = 59, RULE_jinjaElif = 60, RULE_jinjaElse = 61, RULE_jinjaFor = 62, 
		RULE_jinjaSet = 63, RULE_jiniaExtends = 64, RULE_jinjaInclude = 65, RULE_jinjaBlock = 66, 
		RULE_jinjaLocalVariable = 67, RULE_templateBody = 68, RULE_html = 69, 
		RULE_htmlElement = 70, RULE_htmlTag = 71, RULE_normalTag = 72, RULE_selfClosing = 73, 
		RULE_styleTag = 74, RULE_selfClosingTag = 75, RULE_nestedTag = 76, RULE_htmlAttributes = 77, 
		RULE_attributeValue = 78, RULE_htmlText = 79, RULE_htmlTextPart = 80, 
		RULE_css = 81, RULE_cssSelector = 82, RULE_selectorName = 83, RULE_pseudo = 84, 
		RULE_cssKeyValue = 85, RULE_cssValue = 86;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simpleStatement", "compoundStatement", "assignment", 
			"value", "list", "listComprehension", "tuple", "elements", "json", "jsonData", 
			"expressions", "comparisonExpressions", "mathematicalExpressions", "logicalExpressions", 
			"valuesExp", "lambda", "atom", "primaryAtom", "postfix", "globalStatement", 
			"pythonImport", "importSyntax", "fromImport", "importSource", "importList", 
			"importName", "aliasName", "printStatement", "printArgs", "block", "ifStatement", 
			"ifBlock", "elifBlock", "elseBlock", "forLoop", "forExpression", "whileLoop", 
			"function", "parameters", "mandatoryParams", "defaultParams", "parameterWithValue", 
			"returnStatement", "tripleString", "anyId", "functionCall", "argument", 
			"decorator_rule", "classDef", "baseClass", "jinjaBody", "jinjaExpression", 
			"jinjaFilter", "jinjaComment", "jinjaStatement", "jinjaStatementContent", 
			"jinjaIfStatements", "jinjaIf", "jinjaElif", "jinjaElse", "jinjaFor", 
			"jinjaSet", "jiniaExtends", "jinjaInclude", "jinjaBlock", "jinjaLocalVariable", 
			"templateBody", "html", "htmlElement", "htmlTag", "normalTag", "selfClosing", 
			"styleTag", "selfClosingTag", "nestedTag", "htmlAttributes", "attributeValue", 
			"htmlText", "htmlTextPart", "css", "cssSelector", "selectorName", "pseudo", 
			"cssKeyValue", "cssValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'{{'", "'{%'", "'{#'", "'import'", "'from'", null, 
			null, null, null, null, null, null, "'while'", "'def'", "'return'", "'print'", 
			null, "'self'", "'break'", "'continue'", "'pass'", "'try'", "'except'", 
			"'finally'", null, null, null, null, null, "'as'", null, null, "'global'", 
			"'lambda'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'['", "']'", null, null, 
			null, null, null, null, null, "'@'", null, null, null, null, null, null, 
			null, "'}}'", "'%}'", "'#}'", null, null, null, null, null, null, "'endif'", 
			null, "'endfor'", null, "'block'", "'endblock'", "'extends'", "'include'", 
			"'ignore'", "'missing'", "'with'", "'endwith'", "'without'", "'context'", 
			null, null, null, null, null, null, "'/*'", "'*/'", "'</style>'", null, 
			null, null, null, null, null, "'required'", null, null, null, null, "'<style>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TAB_IN", "TAB_OUT", "EXPR_START", "STMT_START", "COMMENT_START", 
			"IMPORT", "FROM", "TRUE", "FALSE", "NONE", "IF", "ELIF", "ELSE", "FOR", 
			"WHILE", "DEF", "RETURN", "PRINT", "CLASS", "SELF", "BREAK", "CONTINUE", 
			"PASS", "TRY", "EXCEPT", "FINALLY", "S_AND", "S_OR", "NOT", "IN", "IS", 
			"AS", "SET", "PIPE", "GLOBAL", "LAMBDA", "PLUS", "MINUS", "MULTIPLY", 
			"SLASH", "MOD", "LT", "GT", "LTE", "GTE", "EQUAL", "NEQ", "STRICT_EQ", 
			"STRICT_NEQ", "ASSIGN", "AND", "OR", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
			"LCBRACK", "RCBRACK", "COLON", "SEMI", "COMMA", "DOT", "HASHTAG", "AT", 
			"TAG_OPEN", "TRIPLE_STRING", "NUMBER", "STRING", "IDENTIFIER", "COMMENT", 
			"WS", "EXPR_END", "STMT_END", "COMMENT_END", "JINJA_LPAREN", "JINJA_RPAREN", 
			"JINJA_COMMA", "JINJA_IF", "JINJA_ELIF", "JINJA_ELSE", "JINJA_ENDIF", 
			"JINJA_FOR", "JINJA_ENDFOR", "JINJA_SET", "JINJA_BLOCK", "JINJA_ENDBLOCK", 
			"JINJA_EXTENDS", "JINJA_INCLUDE", "JINJA_IGNORE", "JINJA_MISSING", "JINJA_WITH", 
			"JINJA_ENDWITH", "JINJA_WITHOUT", "JINJA_CONTEXT", "JINJA_WS", "CSS_WS", 
			"CSS_PROPERTY_START", "CSS_PROPERTY_END", "CSS_SEMI", "CSS_TYPE", "CSS_COM_S", 
			"CSS_COM_E", "STYLE_END", "CSS_ID", "CSS_COMMENT", "CSS_HEX", "TAG_SLASH", 
			"TAG_CLOSE", "HTML_ASSIGN", "REQUIRED", "HTML_ATTR_NAME", "HTML_COMMENT", 
			"HTML_WS", "HTML_TEXT", "HTML_STYLE_START", "NESTED_TAG_OPEN", "CONTENT_END_TAG", 
			"CONTENT_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4611685983529742344L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 8023136347881535L) != 0)) {
				{
				{
				setState(174);
				statement();
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public JinjaBodyContext jinjaBody() {
			return getRuleContext(JinjaBodyContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public CssContext css() {
			return getRuleContext(CssContext.class,0);
		}
		public List<SimpleStatementContext> simpleStatement() {
			return getRuleContexts(SimpleStatementContext.class);
		}
		public SimpleStatementContext simpleStatement(int i) {
			return getRuleContext(SimpleStatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(PythonParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PythonParser.SEMI, i);
		}
		public HtmlContext html() {
			return getRuleContext(HtmlContext.class,0);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(182);
				jinjaBody();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183);
				compoundStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(184);
				css();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(185);
				simpleStatement();
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(186);
					match(SEMI);
					setState(187);
					simpleStatement();
					}
					}
					setState(192);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(193);
				html();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(194);
				expressions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends ParserRuleContext {
		public PythonImportContext pythonImport() {
			return getRuleContext(PythonImportContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public GlobalStatementContext globalStatement() {
			return getRuleContext(GlobalStatementContext.class,0);
		}
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSimpleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitSimpleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStatement);
		try {
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(197);
				pythonImport();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(199);
				printStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(200);
				returnStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(201);
				functionCall();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(202);
				globalStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public CompoundStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterCompoundStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitCompoundStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonParserVisitor ) return ((PythonParserVisitor<? extends T>)visitor).visitCompoundStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompoundStatementContext compoundStatement() throws RecognitionException {
		CompoundStatementContext _localctx = new CompoundStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_compoundStatement);
		try {
			setState(211);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(205);
				ifStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(206);
				forLoop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(207);
				whileLoop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(208);
				function();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(209);
				classDef();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(210);
				expressions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
